Atualização translations/texts/items.json

--- a/translations/texts/items.json
+++ b/translations/texts/items.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Frogg Legs"
+      "Eng": "Frogg Legs",
+      "Por": "Pernas de Sapo"
     }
   }
 ]
