Atualização translations/texts/shared_ancientplatform.mat.json

--- a/translations/texts/shared_ancientplatform.mat.json
+++ b/translations/texts/shared_ancientplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ancient Platform"
+      "Eng": "Ancient Platform",
+      "Por": "Plataforma Antiga"
     }
   }
 ]
