Atualização translations/texts/shared_apexshipplatform.mat.json

--- a/translations/texts/shared_apexshipplatform.mat.json
+++ b/translations/texts/shared_apexshipplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ship Platform"
+      "Eng": "Ship Platform",
+      "Por": "Plataforma de Nave"
     }
   }
 ]
