Atualização translations/texts/shared_bambooplatform.mat.json

--- a/translations/texts/shared_bambooplatform.mat.json
+++ b/translations/texts/shared_bambooplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bamboo Platform"
+      "Eng": "Bamboo Platform",
+      "Por": "Plataforma de Bambu"
     }
   }
 ]
