Atualização translations/texts/shared_beamaxe.json

--- a/translations/texts/shared_beamaxe.json
+++ b/translations/texts/shared_beamaxe.json
@@ -13,7 +13,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Matter Manipulator"
+      "Eng": "Matter Manipulator",
+      "Por": "Manipulador de Matéria"
     }
   }
 ]
