Atualização translations/texts/shared_compositerail.mat.json

--- a/translations/texts/shared_compositerail.mat.json
+++ b/translations/texts/shared_compositerail.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Composite Rail"
+      "Eng": "Composite Rail",
+      "Por": "Trilho Composto"
     }
   }
 ]
