Atualização translations/texts/shared_copperladder.mat.json

--- a/translations/texts/shared_copperladder.mat.json
+++ b/translations/texts/shared_copperladder.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Copper Ladder"
+      "Eng": "Copper Ladder",
+      "Por": "Escada de Cobre"
     }
   }
 ]
