Atualização translations/texts/shared_copperplatform.mat.json

--- a/translations/texts/shared_copperplatform.mat.json
+++ b/translations/texts/shared_copperplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Copper Platform"
+      "Eng": "Copper Platform",
+      "Por": "Plataforma de Cobre"
     }
   }
 ]
