Atualização translations/texts/shared_eri.json

--- a/translations/texts/shared_eri.json
+++ b/translations/texts/shared_eri.json
@@ -13,7 +13,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Matter Block"
+      "Eng": "Matter Block",
+      "Por": "Bloco de Matéria"
     }
   }
 ]
