Atualização translations/texts/shared_goldenplatform.mat.json

--- a/translations/texts/shared_goldenplatform.mat.json
+++ b/translations/texts/shared_goldenplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Gold Platform"
+      "Eng": "Gold Platform",
+      "Por": "Plataforma de Ouro"
     }
   }
 ]
