Atualização translations/texts/shared_lunarbaseplatform.mat.json

--- a/translations/texts/shared_lunarbaseplatform.mat.json
+++ b/translations/texts/shared_lunarbaseplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Lunar Base Platform"
+      "Eng": "Lunar Base Platform",
+      "Por": "Plataforma de Base Lunar"
     }
   }
 ]
