Atualização translations/texts/shared_modernplatform.mat.json

--- a/translations/texts/shared_modernplatform.mat.json
+++ b/translations/texts/shared_modernplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Modern Platform"
+      "Eng": "Modern Platform",
+      "Por": "Plataforma Moderna"
     }
   }
 ]
