Atualização translations/texts/shared_outpostplatform.mat.json

--- a/translations/texts/shared_outpostplatform.mat.json
+++ b/translations/texts/shared_outpostplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Outpost Platform"
+      "Eng": "Outpost Platform",
+      "Por": "Plataforma de Posto Avançado"
     }
   }
 ]
