Atualização translations/texts/shared_plantplatform.mat.json

--- a/translations/texts/shared_plantplatform.mat.json
+++ b/translations/texts/shared_plantplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mossy Platform"
+      "Eng": "Mossy Platform",
+      "Por": "Plataforma com Musgo"
     }
   }
 ]
