Atualização translations/texts/shared_platform.json

--- a/translations/texts/shared_platform.json
+++ b/translations/texts/shared_platform.json
@@ -16,7 +16,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wood Platform"
+      "Eng": "Wood Platform",
+      "Por": "Plataforma de Madeira"
     }
   }
 ]
