Atualização translations/texts/shared_pressurisedplatform.mat.json

--- a/translations/texts/shared_pressurisedplatform.mat.json
+++ b/translations/texts/shared_pressurisedplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pressurised Platform"
+      "Eng": "Pressurised Platform",
+      "Por": "Plataforma Pressurizada"
     }
   }
 ]
