--- a/translations/texts/shared_protectorateflower.json
+++ b/translations/texts/shared_protectorateflower.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Protectorate Flower"
+      "Eng": "Protectorate Flower",
+      "Por": "Flor do Protetorado"
     }
   }
 ]
