Atualização translations/texts/shared_protectorateplatform.mat.json

--- a/translations/texts/shared_protectorateplatform.mat.json
+++ b/translations/texts/shared_protectorateplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Protectorate Platform"
+      "Eng": "Protectorate Platform",
+      "Por": "Plataforma do Protetorado"
     }
   }
 ]
