Atualização translations/texts/shared_ruinsplatform.mat.json

--- a/translations/texts/shared_ruinsplatform.mat.json
+++ b/translations/texts/shared_ruinsplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ruins Platform"
+      "Eng": "Ruins Platform",
+      "Por": "Plataforma em Ruínas"
     }
   }
 ]
