Atualização translations/texts/shared_rustyrail.mat.json

--- a/translations/texts/shared_rustyrail.mat.json
+++ b/translations/texts/shared_rustyrail.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rusty Rail"
+      "Eng": "Rusty Rail",
+      "Por": "Trilho Enferrujado"
     }
   }
 ]
