Atualização translations/texts/shared_silverplatform.mat.json

--- a/translations/texts/shared_silverplatform.mat.json
+++ b/translations/texts/shared_silverplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Silver Platform"
+      "Eng": "Silver Platform",
+      "Por": "Plataforma de Prata"
     }
   }
 ]
