Atualização translations/texts/shared_slime.json

--- a/translations/texts/shared_slime.json
+++ b/translations/texts/shared_slime.json
@@ -22,7 +22,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Slime Blob"
+      "Eng": "Slime Blob",
+      "Por": "Gota de Lodo"
     }
   }
 ]
