Atualização translations/texts/shared_stoneplatform.mat.json

--- a/translations/texts/shared_stoneplatform.mat.json
+++ b/translations/texts/shared_stoneplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Stone Platform"
+      "Eng": "Stone Platform",
+      "Por": "Plataforma de Pedra"
     }
   }
 ]
