Atualização translations/texts/shared_throwingblock..json

--- a/translations/texts/shared_throwingblock..json
+++ b/translations/texts/shared_throwingblock..json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Throwing Block"
+      "Eng": "Throwing Block",
+      "Por": "Bloco Arremessável"
     }
   }
 ]
