Atualização translations/texts/shared_tribalplatform.mat.json

--- a/translations/texts/shared_tribalplatform.mat.json
+++ b/translations/texts/shared_tribalplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Temple Platform"
+      "Eng": "Temple Platform",
+      "Por": "Plataforma de Templo"
     }
   }
 ]
