Atualização translations/texts/shared_tungstenplatform.mat.json

--- a/translations/texts/shared_tungstenplatform.mat.json
+++ b/translations/texts/shared_tungstenplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tungsten Platform"
+      "Eng": "Tungsten Platform",
+      "Por": "Plataforma de Tungstênio"
     }
   }
 ]
