Atualização translations/texts/shared_woodenplatform.mat.json

--- a/translations/texts/shared_woodenplatform.mat.json
+++ b/translations/texts/shared_woodenplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ornate Platform"
+      "Eng": "Ornate Platform",
+      "Por": "Plataforma Ornamentada"
     }
   }
 ]
