Atualização translations/texts/shared_wreckplatform.mat.json

--- a/translations/texts/shared_wreckplatform.mat.json
+++ b/translations/texts/shared_wreckplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wrecked Platform"
+      "Eng": "Wrecked Platform",
+      "Por": "Plataforma em Ruínas"
     }
   }
 ]
