Atualização translations/texts/wide_spread_fields.json

--- a/translations/texts/wide_spread_fields.json
+++ b/translations/texts/wide_spread_fields.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rock Chest"
+      "Eng": "Rock Chest",
+      "Por": "Baú de Pedra"
     }
   }
 ]
