Atualização translations/texts/tiles/materials/alienstripedblock.material.json

--- a/translations/texts/tiles/materials/alienstripedblock.material.json
+++ b/translations/texts/tiles/materials/alienstripedblock.material.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Striped Wood"
+      "Eng": "Alien Striped Wood",
+      "Por": "Madeira Alienígena Listrada"
     }
   }
 ]
