Atualização translations/texts/tiles/materials/blaststone.material.json

--- a/translations/texts/tiles/materials/blaststone.material.json
+++ b/translations/texts/tiles/materials/blaststone.material.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Blaststone Block"
+      "Eng": "Blaststone Block",
+      "Por": "Bloco de Blaststone"
     }
   }
 ]
