--- a/translations/texts/tiles/materials/deadcore.material.json
+++ b/translations/texts/tiles/materials/deadcore.material.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dead Core Block"
+      "Eng": "Dead Core Block",
+      "Por": "Bloco de Núcleo Morto"
     }
   }
 ]
