--- a/translations/texts/tiles/materials/hive.material.json
+++ b/translations/texts/tiles/materials/hive.material.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hivestone"
+      "Eng": "Hivestone",
+      "Por": "Pedra de Colmeia"
     }
   }
 ]
