--- a/translations/texts/tiles/materials/petalblock.material.json
+++ b/translations/texts/tiles/materials/petalblock.material.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Petal Matter Block"
+      "Eng": "Petal Matter Block",
+      "Por": "Bloco de Matéria de Pétala"
     }
   }
 ]
