Atualização translations/texts/tiles/materials/rainbowwood.material.json

--- a/translations/texts/tiles/materials/rainbowwood.material.json
+++ b/translations/texts/tiles/materials/rainbowwood.material.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Unrefined Rainbow Wood"
+      "Eng": "Unrefined Rainbow Wood",
+      "Por": "Madeira Arco-íris Não Refinada"
     }
   }
 ]
