--- a/translations/texts/tiles/materials/rock14.material.json
+++ b/translations/texts/tiles/materials/rock14.material.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Granite Block"
+      "Eng": "Granite Block",
+      "Por": "Bloco de Granito"
     }
   }
 ]
