--- a/translations/texts/tiles/materials/wicker.material.json
+++ b/translations/texts/tiles/materials/wicker.material.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wicker Block"
+      "Eng": "Wicker Block",
+      "Por": "Bloco de Vime"
     }
   }
 ]
