Atualização translations/texts/items/shared_toxicwaste.json

--- a/translations/texts/items/shared_toxicwaste.json
+++ b/translations/texts/items/shared_toxicwaste.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Toxic Waste"
+      "Eng": "Toxic Waste",
+      "Por": "Lixo Tóxico"
     }
   }
 ]
