Atualização translations/texts/items/active/fishingrod/durablefishingrod.activeitem.json

--- a/translations/texts/items/active/fishingrod/durablefishingrod.activeitem.json
+++ b/translations/texts/items/active/fishingrod/durablefishingrod.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Durable Fishing Rod"
+      "Eng": "Durable Fishing Rod",
+      "Por": "Vara de Pesca Resistente"
     }
   }
 ]
