--- a/translations/texts/items/active/fishingrod/fishingrod.activeitem.json
+++ b/translations/texts/items/active/fishingrod/fishingrod.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fishing Rod"
+      "Eng": "Fishing Rod",
+      "Por": "Vara de Pesca"
     }
   }
 ]
