--- a/translations/texts/items/active/fossil/fossilbrushbeginner.activeitem.json
+++ b/translations/texts/items/active/fossil/fossilbrushbeginner.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Basic Fossil Brush"
+      "Eng": "Basic Fossil Brush",
+      "Por": "Pincel de Fóssil Básico"
     }
   }
 ]
