--- a/translations/texts/items/active/fossil/fossilbrushmaster.activeitem.json
+++ b/translations/texts/items/active/fossil/fossilbrushmaster.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Master Fossil Brush"
+      "Eng": "Master Fossil Brush",
+      "Por": "Pincel de Fóssil Mestre"
     }
   }
 ]
