--- a/translations/texts/items/active/fossil/fossilbrushstudent.activeitem.json
+++ b/translations/texts/items/active/fossil/fossilbrushstudent.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Advanced Fossil Brush"
+      "Eng": "Advanced Fossil Brush",
+      "Por": "Pincel de Fóssil Avançado"
     }
   }
 ]
