--- a/translations/texts/items/active/randomblueprint/mechblueprint3.activeitem.json
+++ b/translations/texts/items/active/randomblueprint/mechblueprint3.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Simple Mech Blueprint"
+      "Eng": "Simple Mech Blueprint",
+      "Por": "Diagrama de Mecha Simples"
     }
   }
 ]
