--- a/translations/texts/items/active/randomblueprint/mechblueprint4.activeitem.json
+++ b/translations/texts/items/active/randomblueprint/mechblueprint4.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Advanced Mech Blueprint"
+      "Eng": "Advanced Mech Blueprint",
+      "Por": "Diagrama de Mecha Avançado"
     }
   }
 ]
