--- a/translations/texts/items/active/randomblueprint/mechblueprint5.activeitem.json
+++ b/translations/texts/items/active/randomblueprint/mechblueprint5.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "High-Tech Mech Blueprint"
+      "Eng": "High-Tech Mech Blueprint",
+      "Por": "Diagrama de Mecha de Alta Tecnologia"
     }
   }
 ]
