Atualização translations/texts/items/active/randomblueprint/mechblueprint6.activeitem.json

--- a/translations/texts/items/active/randomblueprint/mechblueprint6.activeitem.json
+++ b/translations/texts/items/active/randomblueprint/mechblueprint6.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Experimental Mech Blueprint"
+      "Eng": "Experimental Mech Blueprint",
+      "Por": "Diagrama de Mecha Experimental"
     }
   }
 ]
