--- a/translations/texts/items/active/shields/commonlargeshield.activeitem.json
+++ b/translations/texts/items/active/shields/commonlargeshield.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Large Shield"
+      "Eng": "Large Shield",
+      "Por": "Escudo Grande"
     }
   }
 ]
