--- a/translations/texts/items/active/shields/commonsmallshield.activeitem.json
+++ b/translations/texts/items/active/shields/commonsmallshield.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Small Shield"
+      "Eng": "Small Shield",
+      "Por": "Escudo Pequeno"
     }
   }
 ]
