--- a/translations/texts/items/active/shields/floranshield.activeitem.json
+++ b/translations/texts/items/active/shields/floranshield.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Floran Shield"
+      "Eng": "Floran Shield",
+      "Por": "Escudo Floran"
     }
   }
 ]
