--- a/translations/texts/items/active/shields/frostshield.activeitem.json
+++ b/translations/texts/items/active/shields/frostshield.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Frost Shield"
+      "Eng": "Frost Shield",
+      "Por": "Escudo de Gelo"
     }
   }
 ]
