Atualização translations/texts/items/active/shields/mushroomshield.activeitem.json

--- a/translations/texts/items/active/shields/mushroomshield.activeitem.json
+++ b/translations/texts/items/active/shields/mushroomshield.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mushroom Shield"
+      "Eng": "Mushroom Shield",
+      "Por": "Escudo de Cogumelo"
     }
   }
 ]
