--- a/translations/texts/items/active/shields/riotshield.activeitem.json
+++ b/translations/texts/items/active/shields/riotshield.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Riot Shield"
+      "Eng": "Riot Shield",
+      "Por": "Escudo Antimotim"
     }
   }
 ]
