Atualização translations/texts/items/active/shields/seashellshield.activeitem.json

--- a/translations/texts/items/active/shields/seashellshield.activeitem.json
+++ b/translations/texts/items/active/shields/seashellshield.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Seashell Shield"
+      "Eng": "Seashell Shield",
+      "Por": "Escudo de Concha"
     }
   }
 ]
