Atualização translations/texts/items/active/shields/startershield.activeitem.json

--- a/translations/texts/items/active/shields/startershield.activeitem.json
+++ b/translations/texts/items/active/shields/startershield.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Basic Shield"
+      "Eng": "Basic Shield",
+      "Por": "Escudo Básico"
     }
   }
 ]
