--- a/translations/texts/items/active/stationtransponder/stationtransponder.activeitem.json
+++ b/translations/texts/items/active/stationtransponder/stationtransponder.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Station Transponder"
+      "Eng": "Station Transponder",
+      "Por": "Transponder de Estação"
     }
   }
 ]
