Atualização translations/texts/items/active/unsorted/filledcapturepod/shared_capturepod.activeitem.json

--- a/translations/texts/items/active/unsorted/filledcapturepod/shared_capturepod.activeitem.json
+++ b/translations/texts/items/active/unsorted/filledcapturepod/shared_capturepod.activeitem.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Filled Capture Pod"
+      "Eng": "Filled Capture Pod",
+      "Por": "Capsula de Captura Preenchida"
     }
   }
 ]
