Atualização translations/texts/items/active/unsorted/oredetector/cavedetector.activeitem.json

--- a/translations/texts/items/active/unsorted/oredetector/cavedetector.activeitem.json
+++ b/translations/texts/items/active/unsorted/oredetector/cavedetector.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cave Detector"
+      "Eng": "Cave Detector",
+      "Por": "Detector de Caverna"
     }
   }
 ]
