--- a/translations/texts/items/active/unsorted/oredetector/oredetector.activeitem.json
+++ b/translations/texts/items/active/unsorted/oredetector/oredetector.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ore Detector"
+      "Eng": "Ore Detector",
+      "Por": "Detector de Minério"
     }
   }
 ]
