Atualização translations/texts/items/active/unsorted/penguincostume/penguincostume.activeitem.json

--- a/translations/texts/items/active/unsorted/penguincostume/penguincostume.activeitem.json
+++ b/translations/texts/items/active/unsorted/penguincostume/penguincostume.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Penguin Costume"
+      "Eng": "Penguin Costume",
+      "Por": "Fantasia de Pinguim"
     }
   }
 ]
