--- a/translations/texts/items/active/unsorted/railhook/railhook.activeitem.json
+++ b/translations/texts/items/active/unsorted/railhook/railhook.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rail Hook"
+      "Eng": "Rail Hook",
+      "Por": "Gancho de Trilho"
     }
   }
 ]
