--- a/translations/texts/items/active/unsorted/railplatform/compositerailplatform.activeitem.json
+++ b/translations/texts/items/active/unsorted/railplatform/compositerailplatform.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Composite Rail Platform"
+      "Eng": "Composite Rail Platform",
+      "Por": "Plataforma de Trilho Composta"
     }
   }
 ]
