--- a/translations/texts/items/active/unsorted/railplatform/rustyrailplatform.activeitem.json
+++ b/translations/texts/items/active/unsorted/railplatform/rustyrailplatform.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rusty Rail Platform"
+      "Eng": "Rusty Rail Platform",
+      "Por": "Plataforma de Trilho Enferrujada"
     }
   }
 ]
