--- a/translations/texts/items/active/unsorted/rewardbag/rewardbag.activeitem.json
+++ b/translations/texts/items/active/unsorted/rewardbag/rewardbag.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Reward Bag"
+      "Eng": "Reward Bag",
+      "Por": "Saco de Recompensa"
     }
   }
 ]
