Atualização translations/texts/items/active/unsorted/superrewardbag/superrewardbag.activeitem.json

--- a/translations/texts/items/active/unsorted/superrewardbag/superrewardbag.activeitem.json
+++ b/translations/texts/items/active/unsorted/superrewardbag/superrewardbag.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Special Reward"
+      "Eng": "Special Reward",
+      "Por": "Recompensa Especial"
     }
   }
 ]
