--- a/translations/texts/items/active/unsorted/translocator/translocator.activeitem.json
+++ b/translations/texts/items/active/unsorted/translocator/translocator.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Translocator"
+      "Eng": "Translocator",
+      "Por": "Translocador"
     }
   }
 ]
