Atualização translations/texts/items/active/unsorted/wateringcan/woodenwateringcan.activeitem.json

--- a/translations/texts/items/active/unsorted/wateringcan/woodenwateringcan.activeitem.json
+++ b/translations/texts/items/active/unsorted/wateringcan/woodenwateringcan.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wooden Watering Can"
+      "Eng": "Wooden Watering Can",
+      "Por": "Regador de Madeira"
     }
   }
 ]
