--- a/translations/texts/items/active/vehiclecontroller/boatcontrollergreen.activeitem.json
+++ b/translations/texts/items/active/vehiclecontroller/boatcontrollergreen.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Green Boat Controller"
+      "Eng": "Green Boat Controller",
+      "Por": "Controlador de Barco Verde"
     }
   }
 ]
