--- a/translations/texts/items/active/vehiclecontroller/hoverbikecontrollergreen.activeitem.json
+++ b/translations/texts/items/active/vehiclecontroller/hoverbikecontrollergreen.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Green Hoverbike Controller"
+      "Eng": "Green Hoverbike Controller",
+      "Por": "Controlador de Hoverbike Verde"
     }
   }
 ]
