Atualização translations/texts/items/active/vehiclecontroller/hoverbikecontrollerkhaki.activeitem.json

--- a/translations/texts/items/active/vehiclecontroller/hoverbikecontrollerkhaki.activeitem.json
+++ b/translations/texts/items/active/vehiclecontroller/hoverbikecontrollerkhaki.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Khaki Hoverbike Controller"
+      "Eng": "Khaki Hoverbike Controller",
+      "Por": "Controlador de Hoverbike Cor de Caqui"
     }
   }
 ]
