Atualização translations/texts/items/active/vehiclecontroller/hoverbikecontrollerred.activeitem.json

--- a/translations/texts/items/active/vehiclecontroller/hoverbikecontrollerred.activeitem.json
+++ b/translations/texts/items/active/vehiclecontroller/hoverbikecontrollerred.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Red Hoverbike Controller"
+      "Eng": "Red Hoverbike Controller",
+      "Por": "Controlador de Hoverbike Vermelha"
     }
   }
 ]
