--- a/translations/texts/items/active/weapons/arena/bruisersword/bruisersword.activeitem.json
+++ b/translations/texts/items/active/weapons/arena/bruisersword/bruisersword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bruiser's Broadsword"
+      "Eng": "Bruiser's Broadsword",
+      "Por": "Espada Larga do Brutamontes"
     }
   }
 ]
