--- a/translations/texts/items/active/weapons/arena/flamethrowerblade/flamethrowerblade.activeitem.json
+++ b/translations/texts/items/active/weapons/arena/flamethrowerblade/flamethrowerblade.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Flamethrower Blade"
+      "Eng": "Flamethrower Blade",
+      "Por": "Lâmina Lança-chamas"
     }
   }
 ]
