Atualização translations/texts/items/active/weapons/arena/hunterrifle/hunterrifle.activeitem.json

--- a/translations/texts/items/active/weapons/arena/hunterrifle/hunterrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/arena/hunterrifle/hunterrifle.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Vintage Scoped Rifle"
+      "Eng": "Vintage Scoped Rifle",
+      "Por": "Rifle com Mira Clássico"
     }
   }
 ]
