Atualização translations/texts/items/active/weapons/boomerang/fireboomerang.activeitem.json

--- a/translations/texts/items/active/weapons/boomerang/fireboomerang.activeitem.json
+++ b/translations/texts/items/active/weapons/boomerang/fireboomerang.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Molten Boomerang"
+      "Eng": "Molten Boomerang",
+      "Por": "Bumerangue Fundido"
     }
   }
 ]
