--- a/translations/texts/items/active/weapons/boomerang/iceboomerang.activeitem.json
+++ b/translations/texts/items/active/weapons/boomerang/iceboomerang.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Frozen Boomerang"
+      "Eng": "Frozen Boomerang",
+      "Por": "Bumerangue Congelado"
     }
   }
 ]
