Atualização translations/texts/items/active/weapons/bossdrop/dragonhead/dragonhead.activeitem.json

--- a/translations/texts/items/active/weapons/bossdrop/dragonhead/dragonhead.activeitem.json
+++ b/translations/texts/items/active/weapons/bossdrop/dragonhead/dragonhead.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dragonhead Pistol"
+      "Eng": "Dragonhead Pistol",
+      "Por": "Pistola de Cabeça de Dragão"
     }
   }
 ]
