Atualização translations/texts/items/active/weapons/bossdrop/erchiuseye/erchiuseye.activeitem.json

--- a/translations/texts/items/active/weapons/bossdrop/erchiuseye/erchiuseye.activeitem.json
+++ b/translations/texts/items/active/weapons/bossdrop/erchiuseye/erchiuseye.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Erchius Eye"
+      "Eng": "Erchius Eye",
+      "Por": "Olho Erchius"
     }
   }
 ]
