--- a/translations/texts/items/active/weapons/bossdrop/ixodoomclaw/ixodoomclaw.activeitem.json
+++ b/translations/texts/items/active/weapons/bossdrop/ixodoomclaw/ixodoomclaw.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ixodoom Claw"
+      "Eng": "Ixodoom Claw",
+      "Por": "Garra de Ixodoom"
     }
   }
 ]
