--- a/translations/texts/items/active/weapons/bossdrop/kluexstaff/kluexstaff.activeitem.json
+++ b/translations/texts/items/active/weapons/bossdrop/kluexstaff/kluexstaff.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Kluex Staff"
+      "Eng": "Kluex Staff",
+      "Por": "Cajado de Kluex"
     }
   }
 ]
