Atualização translations/texts/items/active/weapons/bossdrop/miniknoglauncher/miniknoglauncher.activeitem.json

--- a/translations/texts/items/active/weapons/bossdrop/miniknoglauncher/miniknoglauncher.activeitem.json
+++ b/translations/texts/items/active/weapons/bossdrop/miniknoglauncher/miniknoglauncher.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Miniknog Launcher"
+      "Eng": "Miniknog Launcher",
+      "Por": "Lançador Miniknog"
     }
   }
 ]
