--- a/translations/texts/items/active/weapons/bossdrop/soluskatana/soluskatana.activeitem.json
+++ b/translations/texts/items/active/weapons/bossdrop/soluskatana/soluskatana.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Solus Katana"
+      "Eng": "Solus Katana",
+      "Por": "Solus Katana"
     }
   }
 ]
