--- a/translations/texts/items/active/weapons/bow/bow/bow.activeitem.json
+++ b/translations/texts/items/active/weapons/bow/bow/bow.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hunting Bow"
+      "Eng": "Hunting Bow",
+      "Por": "Arco de Caça"
     }
   }
 ]
