--- a/translations/texts/items/active/weapons/bow/compoundbow/compoundbow.activeitem.json
+++ b/translations/texts/items/active/weapons/bow/compoundbow/compoundbow.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Compound Bow"
+      "Eng": "Compound Bow",
+      "Por": "Arco Composto"
     }
   }
 ]
