--- a/translations/texts/items/active/weapons/bow/cupidsbow/cupidsbow.activeitem.json
+++ b/translations/texts/items/active/weapons/bow/cupidsbow/cupidsbow.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cupid's Bow"
+      "Eng": "Cupid's Bow",
+      "Por": "Arco do Cupido"
     }
   }
 ]
