--- a/translations/texts/items/active/weapons/bow/frozenbow/frozenbow.activeitem.json
+++ b/translations/texts/items/active/weapons/bow/frozenbow/frozenbow.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Frozen Bow"
+      "Eng": "Frozen Bow",
+      "Por": "Arco Congelado"
     }
   }
 ]
