--- a/translations/texts/items/active/weapons/bow/poisonbow/poisonbow.activeitem.json
+++ b/translations/texts/items/active/weapons/bow/poisonbow/poisonbow.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Poison Bow"
+      "Eng": "Poison Bow",
+      "Por": "Arco de Veneno"
     }
   }
 ]
