Atualização translations/texts/items/active/weapons/bow/pollenpump/pollenpump.activeitem.json

--- a/translations/texts/items/active/weapons/bow/pollenpump/pollenpump.activeitem.json
+++ b/translations/texts/items/active/weapons/bow/pollenpump/pollenpump.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pollen Pump"
+      "Eng": "Pollen Pump",
+      "Por": "Bomba de Pólen"
     }
   }
 ]
