--- a/translations/texts/items/active/weapons/bow/tungstenbow/tungstenbow.activeitem.json
+++ b/translations/texts/items/active/weapons/bow/tungstenbow/tungstenbow.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tungsten Hunting Bow"
+      "Eng": "Tungsten Hunting Bow",
+      "Por": "Arco de Caça de Tungstênio"
     }
   }
 ]
