--- a/translations/texts/items/active/weapons/chakram/hardchakram.activeitem.json
+++ b/translations/texts/items/active/weapons/chakram/hardchakram.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hard Chakram"
+      "Eng": "Hard Chakram",
+      "Por": "Chakram Rígido"
     }
   }
 ]
