Atualização translations/texts/items/active/weapons/chakram/sawchakram.activeitem.json

--- a/translations/texts/items/active/weapons/chakram/sawchakram.activeitem.json
+++ b/translations/texts/items/active/weapons/chakram/sawchakram.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Saw Chakram"
+      "Eng": "Saw Chakram",
+      "Por": "Chakram de Serra"
     }
   }
 ]
