--- a/translations/texts/items/active/weapons/fist/boxingglove.activeitem.json
+++ b/translations/texts/items/active/weapons/fist/boxingglove.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Boxing Glove"
+      "Eng": "Boxing Glove",
+      "Por": "Luva de Boxe"
     }
   }
 ]
