Atualização translations/texts/items/active/weapons/fist/brassknuckles.activeitem.json

--- a/translations/texts/items/active/weapons/fist/brassknuckles.activeitem.json
+++ b/translations/texts/items/active/weapons/fist/brassknuckles.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Brass Knuckles"
+      "Eng": "Brass Knuckles",
+      "Por": "Soco-inglês"
     }
   }
 ]
