--- a/translations/texts/items/active/weapons/fist/stunglove.activeitem.json
+++ b/translations/texts/items/active/weapons/fist/stunglove.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Stun Glove"
+      "Eng": "Stun Glove",
+      "Por": "Luva Atordoante"
     }
   }
 ]
