--- a/translations/texts/items/active/weapons/fist/supernovaglove.activeitem.json
+++ b/translations/texts/items/active/weapons/fist/supernovaglove.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Supernova Gauntlet"
+      "Eng": "Supernova Gauntlet",
+      "Por": "Manopla de Supernova"
     }
   }
 ]
