--- a/translations/texts/items/active/weapons/melee/axe/uncommonaxe.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/axe/uncommonaxe.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Uncommon Axe"
+      "Eng": "Uncommon Axe",
+      "Por": "Machado Incomum"
     }
   }
 ]
