--- a/translations/texts/items/active/weapons/melee/broadsword/astrosabredeluxe.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/broadsword/astrosabredeluxe.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Asuterosaberu DX"
+      "Eng": "Asuterosaberu DX",
+      "Por": "Sabre Astral DX"
     }
   }
 ]
