--- a/translations/texts/items/active/weapons/melee/broadsword/commonbroadsword.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/broadsword/commonbroadsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Common Broadsword"
+      "Eng": "Common Broadsword",
+      "Por": "Espada Larga Comum"
     }
   }
 ]
