--- a/translations/texts/items/active/weapons/melee/broadsword/legendblade.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/broadsword/legendblade.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Legend Sword"
+      "Eng": "Legend Sword",
+      "Por": "Espada da Lenda"
     }
   }
 ]
