--- a/translations/texts/items/active/weapons/melee/broadsword/rarebroadsword.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/broadsword/rarebroadsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rare Broadsword"
+      "Eng": "Rare Broadsword",
+      "Por": "Espada Larga Rara"
     }
   }
 ]
