--- a/translations/texts/items/active/weapons/melee/broadsword/stoneblade.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/broadsword/stoneblade.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Stone Sword"
+      "Eng": "Stone Sword",
+      "Por": "Espada de Pedra"
     }
   }
 ]
