Atualização translations/texts/items/active/weapons/melee/broadsword/timepierce.activeitem.json

--- a/translations/texts/items/active/weapons/melee/broadsword/timepierce.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/broadsword/timepierce.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Time Pierce"
+      "Eng": "Time Pierce",
+      "Por": "Perfura Tempo"
     }
   }
 ]
