--- a/translations/texts/items/active/weapons/melee/broadsword/uncommonbroadsword.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/broadsword/uncommonbroadsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Uncommon Broadsword"
+      "Eng": "Uncommon Broadsword",
+      "Por": "Espada Larga Incomum"
     }
   }
 ]
