--- a/translations/texts/items/active/weapons/melee/dagger/commondagger.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/dagger/commondagger.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Common Dagger"
+      "Eng": "Common Dagger",
+      "Por": "Adaga Comum"
     }
   }
 ]
