--- a/translations/texts/items/active/weapons/melee/dagger/uncommondagger.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/dagger/uncommondagger.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Uncommon Dagger"
+      "Eng": "Uncommon Dagger",
+      "Por": "Adaga Incomum"
     }
   }
 ]
