--- a/translations/texts/items/active/weapons/melee/hammer/commonhammer.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/hammer/commonhammer.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Common Hammer"
+      "Eng": "Common Hammer",
+      "Por": "Martelo Comum"
     }
   }
 ]
