Atualização translations/texts/items/active/weapons/melee/hammer/foldingchair.activeitem.json

--- a/translations/texts/items/active/weapons/melee/hammer/foldingchair.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/hammer/foldingchair.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Folding Chair"
+      "Eng": "Folding Chair",
+      "Por": "Cadeira Dobrável"
     }
   }
 ]
