--- a/translations/texts/items/active/weapons/melee/hammer/rarehammer.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/hammer/rarehammer.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rare Hammer"
+      "Eng": "Rare Hammer",
+      "Por": "Martelo Raro"
     }
   }
 ]
