Atualização translations/texts/items/active/weapons/melee/hammer/uncommonhammer.activeitem.json

--- a/translations/texts/items/active/weapons/melee/hammer/uncommonhammer.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/hammer/uncommonhammer.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Uncommon Hammer"
+      "Eng": "Uncommon Hammer",
+      "Por": "Martelo Incomum"
     }
   }
 ]
