--- a/translations/texts/items/active/weapons/melee/pickaxe/energypickaxe.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/pickaxe/energypickaxe.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Energy Pickaxe"
+      "Eng": "Energy Pickaxe",
+      "Por": "Picareta de Energia"
     }
   }
 ]
