--- a/translations/texts/items/active/weapons/melee/shortsword/commonshortsword.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/shortsword/commonshortsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Common Shortsword"
+      "Eng": "Common Shortsword",
+      "Por": "Espada Curta Comum"
     }
   }
 ]
