Atualização translations/texts/items/active/weapons/melee/shortsword/uncommonshortsword.activeitem.json

--- a/translations/texts/items/active/weapons/melee/shortsword/uncommonshortsword.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/shortsword/uncommonshortsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Uncommon Shortsword"
+      "Eng": "Uncommon Shortsword",
+      "Por": "Espada Curta Incomum"
     }
   }
 ]
