--- a/translations/texts/items/active/weapons/melee/shortsword/rareshortsword.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/shortsword/rareshortsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rare Shortsword"
+      "Eng": "Rare Shortsword",
+      "Por": "Espada Curta Rara"
     }
   }
 ]
