--- a/translations/texts/items/active/weapons/melee/spear/commonspear.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/spear/commonspear.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Common Spear"
+      "Eng": "Common Spear",
+      "Por": "Lança Comum"
     }
   }
 ]
