--- a/translations/texts/items/active/weapons/melee/spear/uncommonspear.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/spear/uncommonspear.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Uncommon Spear"
+      "Eng": "Uncommon Spear",
+      "Por": "Lança Incomum"
     }
   }
 ]
