--- a/translations/texts/items/active/weapons/novakid/durasteelassaultrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/novakid/durasteelassaultrifle.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Durasteel Assault Rifle"
+      "Eng": "Durasteel Assault Rifle",
+      "Por": "Rifle de Assalto de Duraço"
     }
   }
 ]
