--- a/translations/texts/items/active/weapons/novakid/durasteelrevolver.activeitem.json
+++ b/translations/texts/items/active/weapons/novakid/durasteelrevolver.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Durasteel Revolver"
+      "Eng": "Durasteel Revolver",
+      "Por": "Revólver de Duraço"
     }
   }
 ]
