--- a/translations/texts/items/active/weapons/novakid/ironassaultrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/novakid/ironassaultrifle.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Iron Assault Rifle"
+      "Eng": "Iron Assault Rifle",
+      "Por": "Rifle de Assalto de Ferro"
     }
   }
 ]
