--- a/translations/texts/items/active/weapons/novakid/ironrevolver.activeitem.json
+++ b/translations/texts/items/active/weapons/novakid/ironrevolver.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Iron Revolver"
+      "Eng": "Iron Revolver",
+      "Por": "Revólver de Ferro"
     }
   }
 ]
