Atualização translations/texts/items/active/weapons/novakid/titaniummachinepistol.activeitem.json

--- a/translations/texts/items/active/weapons/novakid/titaniummachinepistol.activeitem.json
+++ b/translations/texts/items/active/weapons/novakid/titaniummachinepistol.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Titanium Machine Pistol"
+      "Eng": "Titanium Machine Pistol",
+      "Por": "Pistola Automática de Titânio"
     }
   }
 ]
