--- a/translations/texts/items/active/weapons/novakid/titaniumsniperrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/novakid/titaniumsniperrifle.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Titanium Sniper Rifle"
+      "Eng": "Titanium Sniper Rifle",
+      "Por": "Rifle Sniper de Titânio"
     }
   }
 ]
