--- a/translations/texts/items/active/weapons/novakid/tungstenmagnum.activeitem.json
+++ b/translations/texts/items/active/weapons/novakid/tungstenmagnum.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tungsten Magnum"
+      "Eng": "Tungsten Magnum",
+      "Por": "Magnum de Tungstênio"
     }
   }
 ]
