Atualização translations/texts/items/active/weapons/novakid/tungstenshotgun.activeitem.json

--- a/translations/texts/items/active/weapons/novakid/tungstenshotgun.activeitem.json
+++ b/translations/texts/items/active/weapons/novakid/tungstenshotgun.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tungsten Shotgun"
+      "Eng": "Tungsten Shotgun",
+      "Por": "Espingarda de Tungstênio"
     }
   }
 ]
