Atualização translations/texts/items/active/weapons/other/adaptablecrossbow/adaptablecrossbow.activeitem.json

--- a/translations/texts/items/active/weapons/other/adaptablecrossbow/adaptablecrossbow.activeitem.json
+++ b/translations/texts/items/active/weapons/other/adaptablecrossbow/adaptablecrossbow.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Adaptable Crossbow"
+      "Eng": "Adaptable Crossbow",
+      "Por": "Besta Adaptável"
     }
   }
 ]
