Atualização translations/texts/items/active/weapons/other/electricrailgun/electricrailgun.activeitem.json

--- a/translations/texts/items/active/weapons/other/electricrailgun/electricrailgun.activeitem.json
+++ b/translations/texts/items/active/weapons/other/electricrailgun/electricrailgun.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tesla's Wrath"
+      "Eng": "Tesla's Wrath",
+      "Por": "Ira de Tesla"
     }
   }
 ]
