--- a/translations/texts/items/active/weapons/other/electrobaton/electrobaton.activeitem.json
+++ b/translations/texts/items/active/weapons/other/electrobaton/electrobaton.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Electro Baton"
+      "Eng": "Electro Baton",
+      "Por": "Bastão Elétrico"
     }
   }
 ]
