--- a/translations/texts/items/active/weapons/other/eyesword/eyesword.activeitem.json
+++ b/translations/texts/items/active/weapons/other/eyesword/eyesword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Oculus Reaver"
+      "Eng": "Oculus Reaver",
+      "Por": "Oculus Reaver"
     }
   }
 ]
