--- a/translations/texts/items/active/weapons/other/fireworkgun/fireworkgun.activeitem.json
+++ b/translations/texts/items/active/weapons/other/fireworkgun/fireworkgun.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Zephyr Spark Launcher"
+      "Eng": "Zephyr Spark Launcher",
+      "Por": "Lançador de Faíscas Zephyr"
     }
   }
 ]
