Atualização translations/texts/items/active/weapons/other/flamingdemonsword/flamingdemonsword.activeitem.json

--- a/translations/texts/items/active/weapons/other/flamingdemonsword/flamingdemonsword.activeitem.json
+++ b/translations/texts/items/active/weapons/other/flamingdemonsword/flamingdemonsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Firestorm's Fury"
+      "Eng": "Firestorm's Fury",
+      "Por": "Fúria da Tempestade de Fogo"
     }
   }
 ]
