--- a/translations/texts/items/active/weapons/other/gristlegun/gristlegun.activeitem.json
+++ b/translations/texts/items/active/weapons/other/gristlegun/gristlegun.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cartilage Gun"
+      "Eng": "Cartilage Gun",
+      "Por": "Arma de Cartilagem"
     }
   }
 ]
