Atualização translations/texts/items/active/weapons/other/nurusspear/shared_.activeitem.json

--- a/translations/texts/items/active/weapons/other/nurusspear/shared_.activeitem.json
+++ b/translations/texts/items/active/weapons/other/nurusspear/shared_.activeitem.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Nuru's Spear"
+      "Eng": "Nuru's Spear",
+      "Por": "Lança da Nuru"
     }
   }
 ]
