--- a/translations/texts/items/active/weapons/other/remotegrenadelauncher/remotegrenadelauncher.activeitem.json
+++ b/translations/texts/items/active/weapons/other/remotegrenadelauncher/remotegrenadelauncher.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Remote Grenade Launcher"
+      "Eng": "Remote Grenade Launcher",
+      "Por": "Lança-Granadas Remoto"
     }
   }
 ]
