--- a/translations/texts/items/active/weapons/other/soulseeker/soulseeker.activeitem.json
+++ b/translations/texts/items/active/weapons/other/soulseeker/soulseeker.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Soulseeker"
+      "Eng": "Soulseeker",
+      "Por": "Buscadora de Almas"
     }
   }
 ]
