--- a/translations/texts/items/active/weapons/other/tentaclegun/tentaclegun.activeitem.json
+++ b/translations/texts/items/active/weapons/other/tentaclegun/tentaclegun.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Appendage"
+      "Eng": "Alien Appendage",
+      "Por": "Apêndice Alienígena"
     }
   }
 ]
