Atualização translations/texts/items/active/weapons/other/tentaclegun/wormgun.activeitem.json

--- a/translations/texts/items/active/weapons/other/tentaclegun/wormgun.activeitem.json
+++ b/translations/texts/items/active/weapons/other/tentaclegun/wormgun.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Worm Gun"
+      "Eng": "Alien Worm Gun",
+      "Por": "Arma de Verme Alienígena"
     }
   }
 ]
