Atualização translations/texts/items/active/weapons/protectorate/aegisaltbow/aegisaltbow.activeitem.json

--- a/translations/texts/items/active/weapons/protectorate/aegisaltbow/aegisaltbow.activeitem.json
+++ b/translations/texts/items/active/weapons/protectorate/aegisaltbow/aegisaltbow.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Aegisalt Bow"
+      "Eng": "Aegisalt Bow",
+      "Por": "Arco de Aegisalt"
     }
   }
 ]
