--- a/translations/texts/items/active/weapons/protectorate/aegisaltpistol/aegisaltpistol.activeitem.json
+++ b/translations/texts/items/active/weapons/protectorate/aegisaltpistol/aegisaltpistol.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Aegisalt Pistol"
+      "Eng": "Aegisalt Pistol",
+      "Por": "Pistola de Aegisalt"
     }
   }
 ]
