--- a/translations/texts/items/active/weapons/protectorate/brokenprotectoratebroadsword.activeitem.json
+++ b/translations/texts/items/active/weapons/protectorate/brokenprotectoratebroadsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Broken Broadsword"
+      "Eng": "Broken Broadsword",
+      "Por": "Espada Larga Quebrada"
     }
   }
 ]
