--- a/translations/texts/items/active/weapons/protectorate/durasteelbroadsword.activeitem.json
+++ b/translations/texts/items/active/weapons/protectorate/durasteelbroadsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Durasteel Broadsword"
+      "Eng": "Durasteel Broadsword",
+      "Por": "Espada Larga de Duraço"
     }
   }
 ]
