--- a/translations/texts/items/active/weapons/protectorate/durasteelshortsword.activeitem.json
+++ b/translations/texts/items/active/weapons/protectorate/durasteelshortsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Durasteel Shortsword"
+      "Eng": "Durasteel Shortsword",
+      "Por": "Espada Curta de Duraço"
     }
   }
 ]
