--- a/translations/texts/items/active/weapons/protectorate/feroziumstaff/feroziumstaff.activeitem.json
+++ b/translations/texts/items/active/weapons/protectorate/feroziumstaff/feroziumstaff.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ferozium Staff"
+      "Eng": "Ferozium Staff",
+      "Por": "Cajado de Ferozium"
     }
   }
 ]
