--- a/translations/texts/items/active/weapons/protectorate/feroziumwand/feroziumwand.activeitem.json
+++ b/translations/texts/items/active/weapons/protectorate/feroziumwand/feroziumwand.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ferozium Wand"
+      "Eng": "Ferozium Wand",
+      "Por": "Varinha de Ferozium"
     }
   }
 ]
