Atualização translations/texts/items/active/weapons/protectorate/ironbroadsword.activeitem.json

--- a/translations/texts/items/active/weapons/protectorate/ironbroadsword.activeitem.json
+++ b/translations/texts/items/active/weapons/protectorate/ironbroadsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Iron Broadsword"
+      "Eng": "Iron Broadsword",
+      "Por": "Espada Larga de Ferro"
     }
   }
 ]
