--- a/translations/texts/items/active/weapons/protectorate/ironshortsword.activeitem.json
+++ b/translations/texts/items/active/weapons/protectorate/ironshortsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Iron Shortsword"
+      "Eng": "Iron Shortsword",
+      "Por": "Espada Curta de Ferro"
     }
   }
 ]
