Atualização translations/texts/items/active/weapons/protectorate/protectoratebroadsword/protectoratebroadsword.activeitem.json

--- a/translations/texts/items/active/weapons/protectorate/protectoratebroadsword/protectoratebroadsword.activeitem.json
+++ b/translations/texts/items/active/weapons/protectorate/protectoratebroadsword/protectoratebroadsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Protector's Broadsword"
+      "Eng": "Protector's Broadsword",
+      "Por": "Espada Larga do Protetor"
     }
   }
 ]
