Atualização translations/texts/items/active/weapons/protectorate/titaniumspear.activeitem.json

--- a/translations/texts/items/active/weapons/protectorate/titaniumspear.activeitem.json
+++ b/translations/texts/items/active/weapons/protectorate/titaniumspear.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Titanium Spear"
+      "Eng": "Titanium Spear",
+      "Por": "Lança de Titânio"
     }
   }
 ]
