--- a/translations/texts/items/active/weapons/protectorate/titaniumdagger.activeitem.json
+++ b/translations/texts/items/active/weapons/protectorate/titaniumdagger.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Titanium Dagger"
+      "Eng": "Titanium Dagger",
+      "Por": "Adaga de Titânio"
     }
   }
 ]
