--- a/translations/texts/items/active/weapons/protectorate/tungstenaxe.activeitem.json
+++ b/translations/texts/items/active/weapons/protectorate/tungstenaxe.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tungsten Axe"
+      "Eng": "Tungsten Axe",
+      "Por": "Machado de Tungstênio"
     }
   }
 ]
