--- a/translations/texts/items/active/weapons/protectorate/tungstenhammer.activeitem.json
+++ b/translations/texts/items/active/weapons/protectorate/tungstenhammer.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tungsten Hammer"
+      "Eng": "Tungsten Hammer",
+      "Por": "Martelo de Tungstênio"
     }
   }
 ]
