--- a/translations/texts/items/active/weapons/protectorate/violiumbroadsword/violiumbroadsword.activeitem.json
+++ b/translations/texts/items/active/weapons/protectorate/violiumbroadsword/violiumbroadsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Violium Broadsword"
+      "Eng": "Violium Broadsword",
+      "Por": "Espada Larga de Violium"
     }
   }
 ]
