Atualização translations/texts/items/active/weapons/protectorate/violiumshortsword/violiumshortsword.activeitem.json

--- a/translations/texts/items/active/weapons/protectorate/violiumshortsword/violiumshortsword.activeitem.json
+++ b/translations/texts/items/active/weapons/protectorate/violiumshortsword/violiumshortsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Violium Shortsword"
+      "Eng": "Violium Shortsword",
+      "Por": "Espada Curta de Violium"
     }
   }
 ]
