--- a/translations/texts/items/active/weapons/ranged/assaultrifle/commonassaultrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/assaultrifle/commonassaultrifle.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Common Assault Rifle"
+      "Eng": "Common Assault Rifle",
+      "Por": "Rifle de Assalto Comum"
     }
   }
 ]
