--- a/translations/texts/items/active/weapons/ranged/assaultrifle/rareassaultrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/assaultrifle/rareassaultrifle.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rare Assault Rifle"
+      "Eng": "Rare Assault Rifle",
+      "Por": "Rifle de Assalto Raro"
     }
   }
 ]
