--- a/translations/texts/items/active/weapons/ranged/assaultrifle/uncommonassaultrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/assaultrifle/uncommonassaultrifle.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Uncommon Assault Rifle"
+      "Eng": "Uncommon Assault Rifle",
+      "Por": "Rifle de Assalto Incomum"
     }
   }
 ]
