Atualização translations/texts/items/active/weapons/ranged/flamethrower/flamethrower.activeitem.json

--- a/translations/texts/items/active/weapons/ranged/flamethrower/flamethrower.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/flamethrower/flamethrower.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Flamethrower"
+      "Eng": "Flamethrower",
+      "Por": "Lança-chamas"
     }
   }
 ]
