--- a/translations/texts/items/active/weapons/ranged/grenadelauncher/commongrenadelauncher.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/grenadelauncher/commongrenadelauncher.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Common Grenade Launcher"
+      "Eng": "Common Grenade Launcher",
+      "Por": "Lança-granadas Comum"
     }
   }
 ]
