Atualização translations/texts/items/active/weapons/ranged/grenadelauncher/raregrenadelauncher.activeitem.json

--- a/translations/texts/items/active/weapons/ranged/grenadelauncher/raregrenadelauncher.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/grenadelauncher/raregrenadelauncher.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rare Grenade Launcher"
+      "Eng": "Rare Grenade Launcher",
+      "Por": "Lança-granadas Raro"
     }
   }
 ]
