--- a/translations/texts/items/active/weapons/ranged/grenadelauncher/uncommongrenadelauncher.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/grenadelauncher/uncommongrenadelauncher.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Uncommon Grenade Launcher"
+      "Eng": "Uncommon Grenade Launcher",
+      "Por": "Lança-granadas Incomum"
     }
   }
 ]
