--- a/translations/texts/items/active/weapons/ranged/machinepistol/commonmachinepistol.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/machinepistol/commonmachinepistol.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Common Machine Pistol"
+      "Eng": "Common Machine Pistol",
+      "Por": "Pistola Automática Comum"
     }
   }
 ]
