--- a/translations/texts/items/active/weapons/ranged/machinepistol/raremachinepistol.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/machinepistol/raremachinepistol.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rare Machine Pistol"
+      "Eng": "Rare Machine Pistol",
+      "Por": "Pistola Automática Rara"
     }
   }
 ]
