--- a/translations/texts/items/active/weapons/ranged/machinepistol/uncommonmachinepistol.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/machinepistol/uncommonmachinepistol.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Uncommon Machine Pistol"
+      "Eng": "Uncommon Machine Pistol",
+      "Por": "Pistola Automática Incomum"
     }
   }
 ]
