Atualização translations/texts/items/active/weapons/ranged/pistol/commonpistol.activeitem.json

--- a/translations/texts/items/active/weapons/ranged/pistol/commonpistol.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/pistol/commonpistol.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Common Pistol"
+      "Eng": "Common Pistol",
+      "Por": "Pistola Comum"
     }
   }
 ]
