--- a/translations/texts/items/active/weapons/ranged/pistol/rarepistol.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/pistol/rarepistol.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rare Pistol"
+      "Eng": "Rare Pistol",
+      "Por": "Pistola Rara"
     }
   }
 ]
