--- a/translations/texts/items/active/weapons/ranged/pistol/uncommonpistol.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/pistol/uncommonpistol.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Uncommon Pistol"
+      "Eng": "Uncommon Pistol",
+      "Por": "Pistola Incomum"
     }
   }
 ]
