Atualização translations/texts/items/active/weapons/ranged/rocketlauncher/commonrocketlauncher.activeitem.json

--- a/translations/texts/items/active/weapons/ranged/rocketlauncher/commonrocketlauncher.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/rocketlauncher/commonrocketlauncher.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Common Rocket Launcher"
+      "Eng": "Common Rocket Launcher",
+      "Por": "Lança-foguetes Comum"
     }
   }
 ]
