--- a/translations/texts/items/active/weapons/ranged/rocketlauncher/rarerocketlauncher.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/rocketlauncher/rarerocketlauncher.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rare Rocket Launcher"
+      "Eng": "Rare Rocket Launcher",
+      "Por": "Lança-foguetes Raro"
     }
   }
 ]
