--- a/translations/texts/items/active/weapons/ranged/rocketlauncher/uncommonrocketlauncher.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/rocketlauncher/uncommonrocketlauncher.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Uncommon Rocket Launcher"
+      "Eng": "Uncommon Rocket Launcher",
+      "Por": "Lança-foguetes Incomum"
     }
   }
 ]
