Atualização translations/texts/items/active/weapons/ranged/shotgun/commonshotgun.activeitem.json

--- a/translations/texts/items/active/weapons/ranged/shotgun/commonshotgun.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/shotgun/commonshotgun.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Common Shotgun"
+      "Eng": "Common Shotgun",
+      "Por": "Espingarda Comum"
     }
   }
 ]
