--- a/translations/texts/items/active/weapons/ranged/shotgun/rareshotgun.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/shotgun/rareshotgun.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rare Shotgun"
+      "Eng": "Rare Shotgun",
+      "Por": "Espingarda Rara"
     }
   }
 ]
