--- a/translations/texts/items/active/weapons/ranged/shotgun/uncommonshotgun.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/shotgun/uncommonshotgun.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Uncommon Shotgun"
+      "Eng": "Uncommon Shotgun",
+      "Por": "Espingarda Incomum"
     }
   }
 ]
