--- a/translations/texts/items/active/weapons/ranged/sniperrifle/commonsniperrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/sniperrifle/commonsniperrifle.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Common Sniper Rifle"
+      "Eng": "Common Sniper Rifle",
+      "Por": "Rifle Sniper Comum"
     }
   }
 ]
