Atualização translations/texts/items/active/weapons/ranged/sniperrifle/raresniperrifle.activeitem.json

--- a/translations/texts/items/active/weapons/ranged/sniperrifle/raresniperrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/sniperrifle/raresniperrifle.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rare Sniper Rifle"
+      "Eng": "Rare Sniper Rifle",
+      "Por": "Rifle Sniper Raro"
     }
   }
 ]
