--- a/translations/texts/items/active/weapons/ranged/sniperrifle/uncommonsniperrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/sniperrifle/uncommonsniperrifle.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Uncommon Sniper Rifle"
+      "Eng": "Uncommon Sniper Rifle",
+      "Por": "Rifle Sniper Incomum"
     }
   }
 ]
