--- a/translations/texts/items/active/weapons/ranged/unrand/bubblegun/bubblegun.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/bubblegun/bubblegun.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bubble Blaster"
+      "Eng": "Bubble Blaster",
+      "Por": "Arma de Bolhas"
     }
   }
 ]
