--- a/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunblue.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunblue.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Blue Paintgun"
+      "Eng": "Blue Paintgun",
+      "Por": "Pistola de Pintura Azul"
     }
   }
 ]
