--- a/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgungreen.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgungreen.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Green Paintgun"
+      "Eng": "Green Paintgun",
+      "Por": "Pistola de Pintura Verde"
     }
   }
 ]
