--- a/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunorange.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunorange.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Orange Paintgun"
+      "Eng": "Orange Paintgun",
+      "Por": "Pistola de Pintura Laranja"
     }
   }
 ]
