Atualização translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunpurple.activeitem.json

--- a/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunpurple.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunpurple.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Purple Paintgun"
+      "Eng": "Purple Paintgun",
+      "Por": "Pistola de Pintura Roxa"
     }
   }
 ]
