Atualização translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunred.activeitem.json

--- a/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunred.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunred.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Red Paintgun"
+      "Eng": "Red Paintgun",
+      "Por": "Arma de Pintura Vermelha"
     }
   }
 ]
