--- a/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunyellow.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunyellow.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Yellow Paintgun"
+      "Eng": "Yellow Paintgun",
+      "Por": "Arma de Pintura Amarela"
     }
   }
 ]
