--- a/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunpurple.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunpurple.activeitem.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Purple Paintgun",
-      "Por": "Pistola de Pintura Roxa"
+      "Por": "Arma de Pintura Roxa"
     }
   }
 ]
