--- a/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunorange.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunorange.activeitem.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Orange Paintgun",
-      "Por": "Pistola de Pintura Laranja"
+      "Por": "Arma de Pintura Laranja"
     }
   }
 ]
