Atualização translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgungreen.activeitem.json

--- a/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgungreen.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgungreen.activeitem.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Green Paintgun",
-      "Por": "Pistola de Pintura Verde"
+      "Por": "Arma de Pintura Verde"
     }
   }
 ]
