Atualização translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunblue.activeitem.json

--- a/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunblue.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/paintgun/paintgunblue.activeitem.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Blue Paintgun",
-      "Por": "Pistola de Pintura Azul"
+      "Por": "Arma de Pintura Azul"
     }
   }
 ]
