Atualização translations/texts/items/active/weapons/ranged/unrand/snowgun/snowgun.activeitem.json

--- a/translations/texts/items/active/weapons/ranged/unrand/snowgun/snowgun.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/snowgun/snowgun.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Snowball Shooter"
+      "Eng": "Snowball Shooter",
+      "Por": "Atirador de Bola de Neve"
     }
   }
 ]
