Atualização translations/texts/items/active/weapons/ranged/unrand/spaceplasmarifle/spaceplasmarifle.activeitem.json

--- a/translations/texts/items/active/weapons/ranged/unrand/spaceplasmarifle/spaceplasmarifle.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/spaceplasmarifle/spaceplasmarifle.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Plasma Assault Rifle"
+      "Eng": "Plasma Assault Rifle",
+      "Por": "Rifle de Assalto de Plasma"
     }
   }
 ]
