Atualização translations/texts/items/active/weapons/ranged/unrand/watergun/watergun.activeitem.json

--- a/translations/texts/items/active/weapons/ranged/unrand/watergun/watergun.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/watergun/watergun.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Squirt Gun"
+      "Eng": "Squirt Gun",
+      "Por": "Pistola de Água"
     }
   }
 ]
