--- a/translations/texts/items/active/weapons/staff/teslastaff/teslastaff.activeitem.json
+++ b/translations/texts/items/active/weapons/staff/teslastaff/teslastaff.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tesla's Staff"
+      "Eng": "Tesla's Staff",
+      "Por": "Cajado de Tesla"
     }
   }
 ]
