--- a/translations/texts/items/active/weapons/whip/energywhip.activeitem.json
+++ b/translations/texts/items/active/weapons/whip/energywhip.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Lucaine's Energy Whip"
+      "Eng": "Lucaine's Energy Whip",
+      "Por": "Chicote de Energia de Lucaine"
     }
   }
 ]
