--- a/translations/texts/items/active/weapons/whip/intestinewhip.activeitem.json
+++ b/translations/texts/items/active/weapons/whip/intestinewhip.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Intestine Whip"
+      "Eng": "Intestine Whip",
+      "Por": "Chicote de Intestino"
     }
   }
 ]
