--- a/translations/texts/items/active/weapons/whip/ropewhip.activeitem.json
+++ b/translations/texts/items/active/weapons/whip/ropewhip.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rope Whip"
+      "Eng": "Rope Whip",
+      "Por": "Chicote de Corda"
     }
   }
 ]
