Atualização translations/texts/items/active/weapons/whip/vinewhip.activeitem.json

--- a/translations/texts/items/active/weapons/whip/vinewhip.activeitem.json
+++ b/translations/texts/items/active/weapons/whip/vinewhip.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Vine Whip"
+      "Eng": "Vine Whip",
+      "Por": "Chicote de Vinha"
     }
   }
 ]
