--- a/translations/texts/items/active/weapons/npc/npcassaultrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcassaultrifle.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Assault Rifle"
+      "Eng": "NPC Assault Rifle",
+      "Por": "Rifle de Assalto de NPC"
     }
   }
 ]
