--- a/translations/texts/items/active/weapons/npc/npcavianbroadsword.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcavianbroadsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Macuahuitl"
+      "Eng": "NPC Macuahuitl",
+      "Por": "Macuahuitl de NPC"
     }
   }
 ]
