--- a/translations/texts/items/active/weapons/npc/npcbroadsword.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcbroadsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Broadsword"
+      "Eng": "NPC Broadsword",
+      "Por": "Espada Larga de NPC"
     }
   }
 ]
