Atualização translations/texts/items/active/weapons/npc/npcbruisersword.activeitem.json

--- a/translations/texts/items/active/weapons/npc/npcbruisersword.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcbruisersword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Bruiser's Broadsword"
+      "Eng": "NPC Bruiser's Broadsword",
+      "Por": "Espada Larga do Brutamontes de NPC"
     }
   }
 ]
