--- a/translations/texts/items/active/weapons/npc/npccultistbroadsword.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npccultistbroadsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Cultist Broadsword"
+      "Eng": "NPC Cultist Broadsword",
+      "Por": "Espada Larga de Cultista de NPC"
     }
   }
 ]
