--- a/translations/texts/items/active/weapons/npc/npccultistshortsword.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npccultistshortsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Cultist Shortsword"
+      "Eng": "NPC Cultist Shortsword",
+      "Por": "Espada Curta de Cultista de NPC"
     }
   }
 ]
