Atualização translations/texts/items/active/weapons/npc/npcdeadbeatassaultrifle.activeitem.json

--- a/translations/texts/items/active/weapons/npc/npcdeadbeatassaultrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcdeadbeatassaultrifle.activeitem.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "NPC Deadbeat Assault Rifle",
-      "Por": "Rifle de Assalto Inoperante de NPC"
+      "Por": "Rifle de Assalto de Caloteiro de NPC"
     }
   }
 ]
