Atualização translations/texts/items/active/weapons/npc/npcfeneroxspear.activeitem.json

--- a/translations/texts/items/active/weapons/npc/npcfeneroxspear.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcfeneroxspear.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Fenerox Spear"
+      "Eng": "NPC Fenerox Spear",
+      "Por": "Lança Fenerox de NPC"
     }
   }
 ]
