Atualização translations/texts/items/active/weapons/npc/npcshortsword.activeitem.json

--- a/translations/texts/items/active/weapons/npc/npcshortsword.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcshortsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Shortsword"
+      "Eng": "NPC Shortsword",
+      "Por": "Espada Curta de NPC"
     }
   }
 ]
