Atualização translations/texts/items/active/weapons/npc/npcsniperrifle.activeitem.json

--- a/translations/texts/items/active/weapons/npc/npcsniperrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcsniperrifle.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Sniper Rifle"
+      "Eng": "NPC Sniper Rifle",
+      "Por": "Rifle Sniper de NPC"
     }
   }
 ]
