Atualização translations/texts/items/augments/back/damageaugment1.augment.json

--- a/translations/texts/items/augments/back/damageaugment1.augment.json
+++ b/translations/texts/items/augments/back/damageaugment1.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Damage I Augment"
+      "Eng": "Damage I Augment",
+      "Por": "Aprimoramento de Dano I"
     }
   }
 ]
