Atualização translations/texts/items/augments/back/damageaugment2.augment.json

--- a/translations/texts/items/augments/back/damageaugment2.augment.json
+++ b/translations/texts/items/augments/back/damageaugment2.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Damage II Augment"
+      "Eng": "Damage II Augment",
+      "Por": "Aprimoramento de Dano II"
     }
   }
 ]
