Atualização translations/texts/items/augments/back/electricblockaugment.augment.json

--- a/translations/texts/items/augments/back/electricblockaugment.augment.json
+++ b/translations/texts/items/augments/back/electricblockaugment.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Electric Resist Augment"
+      "Eng": "Electric Resist Augment",
+      "Por": "Aprimoramento de Resistência Elétrica"
     }
   }
 ]
