Atualização translations/texts/items/augments/back/damageaugment3.augment.json

--- a/translations/texts/items/augments/back/damageaugment3.augment.json
+++ b/translations/texts/items/augments/back/damageaugment3.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Damage III Augment"
+      "Eng": "Damage III Augment",
+      "Por": "Aprimoramento de Dano III"
     }
   }
 ]
