Atualização translations/texts/items/augments/back/healingaugment3.augment.json

--- a/translations/texts/items/augments/back/healingaugment3.augment.json
+++ b/translations/texts/items/augments/back/healingaugment3.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Healing III Augment"
+      "Eng": "Healing III Augment",
+      "Por": "Aprimoramento de Cura III"
     }
   }
 ]
