Atualização translations/texts/items/augments/back/lightaugment1.augment.json

--- a/translations/texts/items/augments/back/lightaugment1.augment.json
+++ b/translations/texts/items/augments/back/lightaugment1.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Light I Augment"
+      "Eng": "Light I Augment",
+      "Por": "Aprimoramento de Luz I"
     }
   }
 ]
