Atualização translations/texts/items/augments/back/lightaugment2.augment.json

--- a/translations/texts/items/augments/back/lightaugment2.augment.json
+++ b/translations/texts/items/augments/back/lightaugment2.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Light II Augment"
+      "Eng": "Light II Augment",
+      "Por": "Aprimoramento de Luz II"
     }
   }
 ]
