Atualização translations/texts/items/augments/back/mobilityaugment.augment.json

--- a/translations/texts/items/augments/back/mobilityaugment.augment.json
+++ b/translations/texts/items/augments/back/mobilityaugment.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mobility Augment"
+      "Eng": "Mobility Augment",
+      "Por": "Aprimoramento de Mobilidade"
     }
   }
 ]
