Atualização translations/texts/items/augments/back/thornsaugment.augment.json

--- a/translations/texts/items/augments/back/thornsaugment.augment.json
+++ b/translations/texts/items/augments/back/thornsaugment.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Thorns Augment"
+      "Eng": "Thorns Augment",
+      "Por": "Aprimoramento de Espinhos"
     }
   }
 ]
