Atualização translations/texts/items/augments/fishing/fishinglurelight.augment.json

--- a/translations/texts/items/augments/fishing/fishinglurelight.augment.json
+++ b/translations/texts/items/augments/fishing/fishinglurelight.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Illuminated Lure"
+      "Eng": "Illuminated Lure",
+      "Por": "Isca Iluminada"
     }
   }
 ]
